--- a/index.html
+++ b/index.html
@@ -5,9 +5,42 @@
     <title>watch</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/d3f87c5093.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
+        <div class="content_wrap">
+            <div class="time_zone">
+                <p>indonesia/jakarta</p>
+                <button class="change"><i class="fas fa-edit"></i></button>
+            </div>
+            <div class="time">
+                <p>08:27:30</p>
+            </div>
+            <div class="date">
+                <p>monday, 27 feburary, 2024</p>
+            </div>
+        </div>
+        <div class="change_timezone">
+            <p>Change timezone</p>
+            <div class="custom-select">
+                <div class="select-header">
+                    <div class="selected-option">Pick a timezone</div>
+                    <div class="arrow">&#9660;</div>
+                </div>
+                <div class="options">
+                    <div class="option" data-value="america">America</div>
+                    <div class="option" data-value="australia">Australia</div>
+                    <div class="option" data-value="japan">Japan</div>
+                    <div class="option" data-value="arab">Arab</div>
+                    <div class="option" data-value="korea">Korea</div>
+                </div>
+            </div>
+            <input type="submit" value="Submit">
+        </div>
         
     </div>
 </body>
